--- a/kalkulator/style.css
+++ b/kalkulator/style.css
@@ -5,36 +5,34 @@
 }
 
 body {
-  background-color: #e8e8e8;
+  background-color: #e8e8e8e8;
   color: #0b443b;
 }
 
 .container {
-  background-color: #f2f2f2;
-  margin: 0 auto;
   max-width: 400px;
+  margin: 0 auto;
+  background-color: #f2f2f2;
   padding: 20px;
   border: solid 1px #ccc;
   box-shadow: 0 2px 5px #ccc;
   border-radius: 5px;
-  margin-top: 40px;
+  margin-top: 120px;
 }
 
-.result {
+.display {
   width: 100%;
-  padding: 10px;
+  padding: 15px;
+  font-size: 24px;
   border: none;
   box-shadow: 0 2px 5px #ccc inset;
-  border-radius: 5px;
-  font-size: 24px;
 }
 
 .buttons {
   display: grid;
-  grid-template-areas: "";
   grid-template-columns: repeat(4, 1fr);
-  margin-top: 20px;
   gap: 10px;
+  margin-top: 20px;
 }
 
 button {
@@ -43,26 +41,22 @@ button {
   border: none;
   box-shadow: 0 2px 5px #ccc;
   border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.15s ease;
+  transition: background-color 0.1s ease;
 }
 
 button:hover {
   background-color: #ddd;
-  color: inherit;
 }
+
 .clear {
-  background-color: rgb(231, 15, 15);
-  color: #ddd;
-}
-
-.number,
-.decimal {
-  background-color: #fff;
-}
-
-.equals {
-  grid-row: span 3;
-  background-color: rgb(44, 182, 44);
+  background-color: rgb(238, 22, 22);
   color: #fff;
+}
+.equal {
+  background-color: #2fff2f;
+  grid-row: span 3;
+}
+
+.number {
+  background-color: #fff;
 }
