--- a/color-generator/style.css
+++ b/color-generator/style.css
@@ -18,6 +18,8 @@ body {
 h1 {
   text-align: center;
   margin-top: 30px;
+  color: #0b443b;
+  font-size: 42px;
 }
 
 .btn {
@@ -27,7 +29,7 @@ h1 {
   background-color: #259aa6;
   color: #fff;
   font-size: 18px;
-  margin-top: 12px;
+  margin-top: 48px;
   cursor: pointer;
   font-weight: bold;
   transition: background-color 0.15s ease;
@@ -42,7 +44,7 @@ h1 {
   gap: 10px;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 15px;
+  margin-top: 48px;
 }
 
 .color-container {
