--- a/color-generator/style.css
+++ b/color-generator/style.css
@@ -6,6 +6,7 @@
 
 body {
   background-color: #e8e8e8;
+  padding-inline: 10%;
 }
 
 .header {
@@ -39,25 +40,49 @@ h1 {
   background-color: #1fa2b1;
 }
 
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
 .container {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   gap: 10px;
   flex-wrap: wrap;
-  justify-content: center;
   margin-top: 48px;
+  padding-block: 24px;
+}
+
+.pallet-container {
+  width: 240px;
+  height: 100px;
+  display: flex;
+  cursor: pointer;
 }
 
 .color-container {
   background-color: #259aa6;
-  width: 300px;
-  height: 150px;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 12px;
+  writing-mode: vertical-rl;
+  text-orientation: upright;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
-  box-shadow: 0 2px 3px #000;
+}
+
+.color-container:first-child {
+  width: 50%;
+}
+
+.color-container:nth-child(2) {
+  width: 30%;
+}
+
+.color-container:last-child {
+  width: 20%;
 }
